[gd_scene load_steps=2 format=3 uid="uid://lobby123"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1_lobby"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.25, 0.35, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "MULTIPLAYER"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Your Name:"

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter name..."
alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "HOST GAME"

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="JoinContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="JoinLabel" type="Label" parent="VBoxContainer/JoinContainer"]
layout_mode = 2
text = "Or join a game:"

[node name="IPInput" type="LineEdit" parent="VBoxContainer/JoinContainer"]
layout_mode = 2
placeholder_text = "Host IP address..."
alignment = 1

[node name="JoinButton" type="Button" parent="VBoxContainer/JoinContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "JOIN GAME"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Enter your name and host or join a game"
horizontal_alignment = 1
autowrap_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[node name="WaitingPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaitingLabel" type="Label" parent="WaitingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Waiting..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CancelButton" type="Button" parent="WaitingPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -100.0
offset_right = 80.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
text = "Cancel"

[node name="StartButton" type="Button" parent="WaitingPanel"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -50.0
offset_right = 80.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "START GAME"
